fix image spacing in about page

--- a/c-sharks/style/about.css
+++ b/c-sharks/style/about.css
@@ -28,6 +28,7 @@
     max-width: 100%;
     max-height: 100vh;
     overflow: hidden;
+    white-space: nowrap;
 }
 
 .about-img-box:nth-child(2) {
@@ -112,7 +113,6 @@
     z-index: 2;
 }
 
-/* TODO: AYUSIN DAW NI ARVY !!!!*/
 .about-img-box::before,
 .about-img-box::after {
     content: '';
@@ -129,39 +129,6 @@
     color: #fff;
     padding: 10px;
 }
-
-/*For the Our Aim*/
-.about-aim {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.about-aim-column {
-    display: block;
-    margin: 10px;
-    margin: 10px 0;
-    max-width: 100%;
-}
-
-.about-aim-content {
-    font-size: 20px;
-    display: block;
-    width: 100%;
-    max-width: 800px;
-    align-items: center;
-    padding: 5px;
-    border-radius: 5px;
-    color: #333333;
-}
-
-.about-aim-info {
-    text-align: center;
-}
-
-/*End*/
 
 .about-title-section {
     margin-top: 100px;
@@ -189,7 +156,7 @@
 .about-content-section p {
     font-size: 24px;
     line-height: 2;
-    max-width: 70%;
+    max-width: 100%;
     text-align: center;
     overflow-wrap: break-word;
     margin: 0 auto;
@@ -255,4 +222,33 @@
     color: #071952;
     font-weight: 600;
     margin-top: 200px;
+}
+
+@media screen and (max-width: 1024px) {
+    .about-container {
+        width: 100%;
+        height: 90vh;
+        display: flex;
+        flex-direction: column;
+        overflow-y: hidden;
+    }
+
+    .about-gallery {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        height: 100%;
+        margin: 0 auto;
+    }
+
+    .about-img-box {
+        width: 150px !important;
+        height: 350px !important;
+        margin: 0 10px !important;
+    }
+
+    .about-img-box:hover {
+        width: 250px !important;
+    }
+
 }
