--- a/c-sharks/style/media-queries.css
+++ b/c-sharks/style/media-queries.css
@@ -81,7 +81,6 @@
     padding: 1.25rem;
   }
 
-  /* TODO NI JUDRI Add a media query for the about page*/
   .about-container {
     width: 100%;
     height: 100vh;
@@ -164,11 +163,12 @@
   .infinite-slider {
     padding: 30px 0 !important;
   }
+
   .infinite-slider::before,
   .infinite-slider::after {
-  width: 120px;
-  height: 90% !important;
-}
+    width: 120px;
+    height: 90% !important;
+  }
 
   .photo-slider img {
     width: 350px !important;
@@ -181,7 +181,7 @@
     background-color: rgba(151, 151, 151, 0.5);
     transition: right 0.3s ease-in-out;
   }
-  
+
   .photo-slider .photos:hover .credits {
     margin: 0 20px 0 0 !important;
     font-size: 12px !important;
@@ -191,7 +191,7 @@
   .header {
     padding: 10px 5%;
     text-align: center;
-    
+
   }
 
   /* Banner Card */
@@ -208,10 +208,11 @@
     right: 10px;
     color: #fff;
     padding: 10px;
-    
+
   }
 
-  .banner-text h2, h4 {
+  .banner-text h2,
+  h4 {
     font-size: 20px !important;
     text-align: left;
   }
